# Kingdom-System-v2

./: README.md  docker-compose.yml
docs/: for_developers.md
plugs/: .gitignore  README.md
plugs/email_verification_plug/: pyproject.toml
plugs/email_verification_plug/src/: redis_controller.py  send_email.py  vercode_management.py
plugs/schedule_api_plug/: Cargo.toml  develop.nix
plugs/schedule_api_plug/prisma/: schema.prisma
plugs/schedule_api_plug/src/: main.rs
plugs/schedule_api_plug/src/endpoints/: schedule.rs  teachers.rs
plugs/schedule_api_plug/src/http_requests/: schedule_check.http
