[tool.poetry]
name = "email-verification-plug"
version = "0.1.0"
description = ""
authors = ["Noimpass <andraver731@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "email_verification_plug"}]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
